# novel_download

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: main.yml  rust.yml
src/: main.rs  novel.rs  novel_147.rs
