[package]
name = "novel_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.11.13", features = ["json", "native-tls", "cookies"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
scraper = "0.13"
urlencoding = "2"
lazy_static = "1"
regex = "1"
async-trait = "0.1"